set the default branch in linter

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -28,5 +28,5 @@ jobs:
         uses: github/super-linter/slim@v4
         env:
           # VALIDATE_ALL_CODEBASE: false
-          # DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
