--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -22,4 +22,9 @@ jobs:
       - name: tfsec
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
-          args: --format=checkstyle
+          args: --format=default
+
+      - name: tfsec
+        uses: tfsec/tfsec-pr-commenter-action@main
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
