--- a/.github/workflows/tfsec_security.yml
+++ b/.github/workflows/tfsec_security.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run tfsec
-        uses: aquasecurity/tfsec-sarif-action@main
+        uses: aquasecurity/tfsec-sarif-action@master
         with:
           sarif_file: tfsec.sarif
 
