removing terrascan from the linting operation as it is not working as expected

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -29,3 +29,4 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MULTI_STATUS: true
+          VALIDATE_TERRAFORM_TERRASCAN: = false
