--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -20,7 +20,7 @@ jobs:
       - name: tfsec scan
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
-          args: --format=Checkstyle
+          format: checkstyle
 
       - name: Write tfsec comments
         uses: tfsec/tfsec-pr-commenter-action@main
