updated the github actions triggers to be more clear and general to all pull_requests

--- a/.github/workflows/tfsec_security.yml
+++ b/.github/workflows/tfsec_security.yml
@@ -8,9 +8,9 @@ name: tfsec
 
 on:
   push:
-    branches: ["main"]
+    branches: 
+      - main
   pull_request:
-    branches: ["main"]
   schedule:
     - cron: '33 11 * * 1'
 
