--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -14,6 +14,10 @@ jobs:
       ##########################
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: ls -lha
+        run: ls -lha
+        
       ##########################
       #       Run TFSEC        #
       ##########################
