--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -15,17 +15,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - name: Print directory
+      - name: Print working directory
         run: pwd
 
-      - name: output file test
-        run: cat ./modules/aws/cloudtrail/main.tf
-
+      - name: Print github workspace directory contents
+        run: ls -la /github/workspace
       ##########################
       #       Run TFSEC        #
       ##########################
       - name: tfsec scan
         uses: aquasecurity/tfsec-action@v1.0.0
+        with:
+          directory: .
 
       - name: Write tfsec comments
         uses: tfsec/tfsec-pr-commenter-action@main
