--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -25,6 +25,7 @@ jobs:
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
           directory: .
+          args: --verbose
 
       - name: Write tfsec comments
         uses: tfsec/tfsec-pr-commenter-action@main
