--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -25,7 +25,7 @@ jobs:
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
           working_directory: .
-          args: --verbose
+          verbose: true
 
       - name: Write tfsec comments
         uses: tfsec/tfsec-pr-commenter-action@main
