--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -22,7 +22,7 @@ jobs:
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
           working_directory: .
-          additional_args: verbose
+          additional_args: --verbose
 
       - name: Write tfsec comments
         uses: tfsec/tfsec-pr-commenter-action@main
