--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -23,7 +23,7 @@ jobs:
       - name: tfsec scan
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
-          # working_directory: /home/runner/work/terraform-modules/terraform-modules
+          soft_fail: true
           additional_args: --verbose --force-all-dirs
 
       - name: Write tfsec comments
