updated all tfsec actions to scan all directories

--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -30,3 +30,4 @@ jobs:
         uses: tfsec/tfsec-pr-commenter-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          additional_args: --force-all-dirs
