--- a/.github/workflows/tfsec_security.yml
+++ b/.github/workflows/tfsec_security.yml
@@ -31,6 +31,7 @@ jobs:
         uses: aquasecurity/tfsec-sarif-action@master
         with:
           sarif_file: tfsec.sarif
+          additional_args: --force-all-dirs
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
