--- a/.github/workflows/tfsec_security.yml
+++ b/.github/workflows/tfsec_security.yml
@@ -31,7 +31,7 @@ jobs:
         uses: aquasecurity/tfsec-sarif-action@master
         with:
           sarif_file: tfsec.sarif
-          args: --force-all-dirs
+          full_repo_scan: true
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
