--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -28,5 +28,7 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MULTI_STATUS: true
+          VALIDATE_MARKDOWN: false
+          VALIDATE_NATURAL_LANGUAGE: false
           VALIDATE_TERRAFORM_TERRASCAN: false
           VALIDATE_ALL_CODEBASE: false
