updating workflows to be more clear on the steps being accomplished with combining and naming the workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,26 @@ jobs:
         run: terraform fmt -check -diff -recursive
         #continue-on-error: true
 
+  test_tfsec:
+    name: tfsec
+    runs-on: ubuntu-latest
+
+    steps:
+      ##########################
+      # Checkout the code base
+      ##########################
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      ##########################
+      # Run TFSEC
+      ##########################
+      - name: Run tfsec and write pull request comments
+        uses: tfsec/tfsec-pr-commenter-action@main
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tfsec_args: --force-all-dirs
+
   test_linter:
       name: Linter
       runs-on: ubuntu-latest
