removed the diff from the build terraform fmt because it will exist within the git diff itself

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Terraform fmt
         id: fmt
-        run: terraform fmt -diff -recursive
+        run: terraform fmt -recursive
       
       - name: Commit terraform fmt changes
         run: |
