--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,19 +17,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: ${{ github.head_ref }}
 
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -recursive
-      
-      - name: Commit terraform fmt changes
-        run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add --all
-          git commit -m "Continuous Integration - terraform fmt"
-          git push
+
+      # - name: Commit terraform fmt changes
+      #   run: |
+      #     git config --local user.name "github-actions[bot]"
+      #     git config --local user.email "github-actions[bot]@users.noreply.github.com"
+      #     git add --all
+      #     git commit -m "Continuous Integration - terraform fmt"
+      #     git push
+
+      - name: Git Auto Commit
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Continuous Integration - terraform fmt
+          # commit_options: '--no-verify'
+          # commit_user_name: github-actions[bot]
+          # commit_user_email: github-actions[bot]@users.noreply.github.com
+          # commit_author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
+          # file_pattern: '**/*.tf'
+
 
 
   # terraform_docs:
