--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,19 +17,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -recursive
 
-      # - name: Commit terraform fmt changes
-      #   run: |
-      #     git config --local user.name "github-actions[bot]"
-      #     git config --local user.email "github-actions[bot]@users.noreply.github.com"
-      #     git add --all
-      #     git commit -m "Continuous Integration - terraform fmt"
-      #     git push
+      - name: Render terraform docs and push changes back to PR
+        uses: terraform-docs/gh-actions@main
+        with:
+          working-dir: .
+          output-file: README.md
+          output-method: inject
+          git-push: "true"
 
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4
@@ -40,7 +40,6 @@ jobs:
           # commit_user_email: github-actions[bot]@users.noreply.github.com
           # commit_author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
           # file_pattern: '**/*.tf'
-
 
 
   # terraform_docs:
