--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,9 +48,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      ##########################
-      # Checkout the code base #
-      ##########################
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -58,9 +55,7 @@ jobs:
           # list of changed files within `super-linter`
           fetch-depth: 0
 
-      ################################
-      # Run Linter against code base #
-      ################################
+      # Run Linter against code base
       - name: Linter
         uses: github/super-linter/slim@v4
         env:
