--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,15 @@ jobs:
     steps:
       - name: HashiCorp - Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Terraform version
+        id: version
+        run: terraform version
 
       - name: Terraform fmt
         id: fmt
@@ -28,15 +34,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      ##########################
-      # Checkout the code base
-      ##########################
       - name: Checkout
         uses: actions/checkout@v3
 
-      ##########################
-      # Run TFSEC
-      ##########################
       - name: Run tfsec and write pull request comments
         uses: tfsec/tfsec-pr-commenter-action@main
         with:
@@ -56,7 +56,7 @@ jobs:
           fetch-depth: 0
 
       # Run Linter against code base
-      - name: Linter
+      - name: Run linter against all changed files
         uses: github/super-linter/slim@v4
         env:
           DEFAULT_BRANCH: main
