added workflow changes from dev2.0 branch to get terraform-docs

--- a/.github/workflows/scheduled_tfsec_security_scan.yml
+++ b/.github/workflows/scheduled_tfsec_security_scan.yml
@@ -1,9 +1,9 @@
 ---
-name: Nightly - tfsec Security Scan
+name: Scheduled - tfsec Security Scan
 
 on:
   schedule:
-    - cron: '33 21 * * *'
+    - cron: '33 */12 * * *'
 
 jobs:
   tfsec:
