Revert "added workflow changes from dev2.0 branch to get terraform-docs"
This reverts commit bd25c17e3556e8710c676167faf131b67ea53f32.

--- a/.github/workflows/nightly_tfsec_security_scan.yml
+++ b/.github/workflows/nightly_tfsec_security_scan.yml
@@ -1,9 +1,9 @@
 ---
-name: Scheduled - tfsec Security Scan
+name: Nightly - tfsec Security Scan
 
 on:
   schedule:
-    - cron: '33 */12 * * *'
+    - cron: '33 21 * * *'
 
 jobs:
   tfsec:
