lint/github fixes for all modules

--- a/modules/aws/config/lambda_compliance_reporter/Dockerfile
+++ b/modules/aws/config/lambda_compliance_reporter/Dockerfile
@@ -3,7 +3,7 @@ FROM amazonlinux:2
 # Install Python 3.8, pip, and zip using amazon-linux-extras
 RUN yum -y update && \
     amazon-linux-extras enable python3.8 && \
-    yum -y install python38 python38-pip zip && \
+    yum -y install python38-3.8.16-1.amzn2 python38-pip-20.2.2-1.amzn2 zip-3.0-23.amzn2.0.2 && \
     yum clean all
 
 WORKDIR /build
