--- a/modules/aws/config/lambda_compliance_reporter/Dockerfile
+++ b/modules/aws/config/lambda_compliance_reporter/Dockerfile
@@ -19,6 +19,7 @@
 FROM amazonlinux:2023
 
 # Install Python 3.12, pip, and zip
+# hadolint ignore=DL3041
 RUN dnf -y update && \
     dnf -y install python3.12 python3.12-pip zip && \
     dnf clean all
@@ -28,5 +29,5 @@ WORKDIR /build
 COPY requirements.txt .
 COPY lambda_function.py .
 
-RUN python3.12 -m pip install -r requirements.txt -t . && \
+RUN python3.12 -m pip install --no-cache-dir -r requirements.txt -t . && \
     zip -r9 /build/lambda_package.zip .
