--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -7,7 +7,9 @@ tags = ["false-positive"]
 
 [allowlist]
 regexes = [
-  '''s3_key_prefix\s+=\s+var\.s3_key_prefix'''
+  '''s3_key_prefix\s+=\s+var\.s3_key_prefix''',
+  '''s3_key_prefix\s*=\s*var\.s3_key_prefix''',
+  '''s3_key_prefix\s*=\s*var.s3_key_prefix'''
 ]
 paths = [
   "modules/aws"
