--- a/modules/thinkstack/aws_backup_custom/modules/backup_reporter/Dockerfile
+++ b/modules/thinkstack/aws_backup_custom/modules/backup_reporter/Dockerfile
@@ -6,12 +6,9 @@ FROM public.ecr.aws/sam/build-python3.12:1.138.0
 
 WORKDIR /build
 
-# Copy and install requirements
 COPY requirements.txt .
-RUN pip3 install --no-cache-dir -r requirements.txt -t . && \
-    pip3 list
+RUN pip3 install --no-cache-dir -r requirements.txt -t .
 
-# Copy Lambda function code
 COPY lambda_function.py .
 
 RUN find . -type d -name '*.dist-info' -exec rm -rf {} + && \
