--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -34,33 +34,18 @@ jobs:
           # GitHub token for API access
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-          # Validate all code by default
+          # Validate all code by default - runs ALL available linters
           VALIDATE_ALL_CODEBASE: true
           
           # Set default branch
           DEFAULT_BRANCH: main
           
-          # Linter configurations
-          VALIDATE_TERRAFORM_FMT: true
-          VALIDATE_TERRAFORM_TFLINT: true
-          VALIDATE_JSON: true
-          VALIDATE_YAML: true
-          VALIDATE_MARKDOWN: true
-          VALIDATE_BASH: true
-          VALIDATE_BASH_EXEC: true
-          VALIDATE_PYTHON_BLACK: true
-          VALIDATE_PYTHON_FLAKE8: true
-          VALIDATE_PYTHON_ISORT: true
-          VALIDATE_PYTHON_MYPY: true
-          VALIDATE_PYTHON_PYLINT: true
-          VALIDATE_GITLEAKS: true
-          VALIDATE_JSCPD: true
-          
-          # Terraform-specific settings
+          # Configuration files for specific linters
           TERRAFORM_TFLINT_CONFIG_FILE: .tflint.hcl
-          
-          # Python-specific settings (line-length=120 to match pre-commit)
           PYTHON_FLAKE8_CONFIG_FILE: .flake8
+          
+          # Optional: Disable specific linters if needed (uncomment to disable)
+          # VALIDATE_JSCPD: false  # Copy-paste detection can be noisy
           
           # Output settings
           LOG_LEVEL: NOTICE
